# sudoblark.python.core

./: .gitignore  Doxyfile  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/: commit-to-pull-request.yaml  new-comment.py  pull_request_template.md
.github/workflows/: commit-to-pull-request.yaml  release.yaml
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/developers-notes/base-model/: index.html
1.0.0/developers-notes/github-example/: index.html
1.0.0/developers-notes/operating-principles/: index.html
1.0.0/developers-notes/style-guide/: index.html
1.0.0/known-interfaces/github/client/: index.html
1.0.0/known-interfaces/github/comment/: index.html
1.0.0/known-interfaces/github/organisation/: index.html
1.0.0/known-interfaces/github/pull-request/: index.html
1.0.0/known-interfaces/github/pull-request-state/: index.html
1.0.0/known-interfaces/github/repository/: index.html
1.0.0/pypi_readme/: index.html
1.0.0/usage/: index.html
1.0.0/useful-examples/github/: index.html
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/developers-notes/base-model/: index.html
1.0.1/developers-notes/github-example/: index.html
1.0.1/developers-notes/operating-principles/: index.html
1.0.1/developers-notes/style-guide/: index.html
1.0.1/known-interfaces/github/client/: index.html
1.0.1/known-interfaces/github/comment/: index.html
1.0.1/pypi_readme/: index.html
1.0.1/usage/: index.html
1.0.1/useful-examples/github/: index.html
1.0.2/: 404.html  index.html  objects.inv  sitemap.xml
1.0.2/developers-notes/base-model/: index.html
1.0.2/developers-notes/github-example/: index.html
1.0.2/developers-notes/operating-principles/: index.html
1.0.2/developers-notes/style-guide/: index.html
1.0.2/pypi_readme/: index.html
1.0.2/usage/: index.html
1.0.2/useful-examples/github/: index.html
docs/: doxgen-mainpage.dox  index.md  pypi_readme.md  usage.md
docs/developers-notes/: base-model.md  github-example.md  operating-principles.md  style-guide.md
docs/known-interfaces/github/: client.md  comment.md  organisation.md  pull-request-state.md  pull-request.md  repository.md
docs/useful-examples/: github.md
features/: comments.feature  organisations.feature  pull_requests.feature  repositories.feature
features/steps/: steps.py
sudoblark_python_core/: __init__.py
sudoblark_python_core/abstracts/: restapi.py
sudoblark_python_core/github/: __init__.py  client.py  comments.py  organisation.py  pull_request.py  repository.py
(+10 files in other folders)
